[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Declare package data explicitly (instead of the default include-package-data
# manifest scan) so build_py does not warn that asset/template directories are
# "absent from the `packages` configuration". The second glob is needed because
# `**` does not match hidden files (the package templates ship .gitignore files).
include-package-data = false

# The `.agents/**` glob is needed because `**` does not match hidden
# directories: Agent Skills ship inside the package under `shiny/.agents/skills/`
# (the library-skills convention). Guarded by tests/pytest/test_packaging.py.
[tool.setuptools.package-data]
shiny = ["**", "**/.gitignore", ".agents/**"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shiny*"]
# Keep `false` so only directories with an `__init__.py` are packaged as code.
# `true` would register every asset/template directory (shiny/www/..., etc.) as
# a PEP 420 namespace package and sweep in any stray directory or .py file that
# lands under shiny/, over-exposing the package surface. Those directories are
# instead shipped as data files via the package-data globs above.
namespaces = false

[tool.setuptools.exclude-package-data]
"*" = ["api-examples/**"]

[tool.setuptools_scm]
write_to = "shiny/_version.py"
local_scheme = "no-local-version"

[project]
name = "shiny"
dynamic = ["version"]
authors = [{ name = "Winston Chang", email = "winston@posit.co" }]
description = "A web development framework for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typing-extensions>=4.10.0",
    "uvicorn>=0.23.0;platform_system!='Emscripten'",
    "starlette>=0.17.1",
    "websockets>=13.0",
    "htmltools>=0.7.0",
    "click>=8.1.4;platform_system!='Emscripten'",
    "markdown-it-py>=1.1.0",
    "mdit-py-plugins>=0.3.0",
    "linkify-it-py>=1.0",
    "platformdirs>=2.1.0",
    "asgiref>=3.5.2",
    "packaging>=20.9",
    "watchfiles>=0.18.0;platform_system!='Emscripten'",
    "questionary>=2.0.0;platform_system!='Emscripten'",
    "prompt-toolkit>=3.0.0;platform_system!='Emscripten'",
    "python-multipart>=0.0.7;platform_system!='Emscripten'",
    "setuptools;python_version>='3.12'",
    "narwhals>=1.10.0",
    "orjson>=3.10.7",
    "shinychat>=0.1.0",
    # 1.24.0+ required: older SDKs formatted span exception stack traces from
    # the active exception instead of the sanitized one shiny passes to
    # `record_exception()`, leaking unsanitized error messages
    "opentelemetry-api>=1.24.0",
]

[project.optional-dependencies]
theme = ["libsass>=0.23.0", "brand_yml>=0.2.0"]
otel = [
    # 1.24.0+ required: same sanitized-stack-trace floor as opentelemetry-api above
    "opentelemetry-sdk>=1.24.0",
    # Enables zero-code auto-instrumentation via `opentelemetry-instrument shiny run
    # app.py`. The [otlp] extra provides the default `otlp` exporter so the bare
    # command works without extra flags (and allows switching between gRPC/HTTP).
    "opentelemetry-distro[otlp]>=0.45b0",
]
test = [
    "pytest>=6.2.4",
    "pytest-asyncio>=0.17.2",
    "pytest-playwright>=0.5.2",
    "playwright>=1.48.0",
    "pytest-xdist",
    "pytest-shard",
    "pytest-timeout",
    "pytest-rerunfailures",
    "pytest-cov",
    "coverage",
    "syrupy>=5.5.1",
    "psutil",
    "astropy",
    "suntime",
    "timezonefinder ; platform_system != 'Windows'",
    "ipyleaflet",
    "shinywidgets",
    "shinychat>=0.6.0",
    "seaborn",
    "plotnine",
    "plotly",
    "anywidget",
    "duckdb",
    "holoviews",
    "bokeh",
    "xarray",
    "geopandas",
    "geodatasets",
    "missingno",
    "rsconnect-python",
    "scikit-learn",
    "folium",
    "palmerpenguins>=0.1.5",                         # type stubs available
    "faicons",
    "ridgeplot",
    "great_tables",
    "polars",
    "dask[dataframe]",
    "pyarrow",
    "pyarrow-stubs",
    "opentelemetry-sdk>=1.24.0",
    "logfire>=4.0.0",
]
dev = [
    "black>=26.1.0",
    "flake8>=6.0.0",
    "flake8-bugbear>=23.2.13",
    "Flake8-pyproject>=1.2.3",
    "isort>=5.10.1",
    "libsass>=0.23.0",
    "brand_yml>=0.2.0",
    "pyrefly>=1.1.1",
    "pyright>=1.1.407",
    "pre-commit>=2.15.0",
    "wheel",
    "matplotlib",
    "pandas",
    "pandas-stubs",
    "polars",
    "numpy",
    "shinyswatch>=0.7.0",
    "python-dotenv",
    "chatlas>=0.6.1",
    "aiohttp",
    "beautifulsoup4",
]
doc = [
    "jupyter",
    "jupyter_client < 8.0.0",
    "tabulate",
    "shinylive>=0.8.9",
    "pydantic>=2.7.4",
    "quartodoc>=0.8.1",
    "griffe>=1.3.2,<2.0.0",
]
add-test = [
    "chatlas[anthropic,openai]",
    "openai>=1.104.1",
    "anthropic>=0.62.0",
    "inspect-ai>=0.3.129;python_version>='3.10'",
    "pytest-timeout",
    "pytest>=6.2.4",
    "pytest-playwright>=0.5.2",
    "playwright>=1.48.0",
]


[project.urls]
Homepage = "https://github.com/posit-dev/py-shiny"
Documentation = "https://shiny.posit.co/py/"
Repository = "https://github.com/posit-dev/py-shiny"
"Bug Tracker" = "https://github.com/posit-dev/py-shiny/issues"

[project.scripts]
shiny = "shiny._main:main"

[project.entry-points.pytest11]
shiny-test = "shiny.pytest._pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
extend-exclude = ["docs", ".venv", "venv", "typings", "build", "_dev", ".context"]
ignore = ["E302", "E501", "F403", "F405", "W503", "E203", "E701", "E704"]

[tool.black]
extend-exclude = ".context"

[tool.isort]
profile = "black"
skip = [
    "__init__.py",
    "typings/",
    "_dev/",
    ".context/",
    ".venv",
    "venv",
    ".tox",
    "build",
    "_version.py",
]

[tool.mypy]
# The goal of our usage of mypy is to make to sure mypy can run, not that it catches any errors (we use pyright to find our errors).
# Therefore, ignore_errors but do not ignore runtime errors while checking
# Note: This setting can not be done via CLI and must be set within a config
ignore_errors = true
exclude = ["shiny/api-examples", "shiny/templates"]
