[metadata]
name = shiny
version = attr: shiny.__version__
author = Winston Chang
author_email = winston@rstudio.com
url = https://github.com/rstudio/py-shiny
description = A web development framework for Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/rstudio/py-shiny/issues
    Documentation = https://shiny.rstudio.com/py/
    Source Code = https://github.com/rstudio/py-shiny

[options]
python_requires = >=3.7
packages = find_namespace:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    typing-extensions>=4.0.1
    uvicorn>=0.16.0
    starlette>=0.17.1
    contextvars>=2.4
    websockets>=10.0
    python-multipart
    htmltools>=0.2.1
    click>=8.0.3
    markdown-it-py>=1.1.0
    # This is needed for markdown-it-py. Without it, when loading shiny/ui/_markdown.py,
    # Python emits the following: "UserWarning: The 'tasklists' feature of GitHub
    # flavored markdown requires the mdit_py_plugins package."
    mdit-py-plugins>=0.3.0
    linkify-it-py>=1.0
    appdirs>=1.4.4
    asgiref>=3.5.2
    importlib-metadata>=1.1.0,<5;python_version<"3.8"
tests_require =
    pytest>=3
zip_safe = False

[options.extras_require]
test =
    pytest>=6.2.4
    pytest-asyncio>=0.17.2
    pytest-playwright>=0.3.0
    pytest-xdist
    pytest-timeout
    psutil
    astropy
    suntime
    timezonefinder
    ipyleaflet
    shinywidgets
    seaborn
    plotnine
    plotly
dev =
    black>=23.1.0
    # Python 3.7 needs a specific version of flake8 to satisfy other dependencies.
    flake8==3.9.2;python_version<="3.7"
    flake8>=6.0.0;python_version>"3.7"
    flake8-bugbear>=23.2.13
    isort>=5.10.1
    pyright>=1.1.305
    pre-commit>=2.15.0
    wheel
    matplotlib
    pandas
    pandas-stubs
    numpy
    shinyswatch>=0.2.3

[options.packages.find]
include = shiny, shiny.*

[options.package_data]
shiny = py.typed

[options.entry_points]
console_scripts =
    shiny = shiny._main:main

[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# W503: Line break occurred before a binary operator
ignore = E302, E501, F403, F405, W503
extend_exclude = docs, .venv, venv, typings, e2e, build

[isort]
profile=black
skip=
    __init__.py
    typings/
    .venv
    venv
    .tox
    build
