[metadata]
name = shiny
version = attr: shiny.__version__
author = Winston Chang
author_email = winston@rstudio.com
url = https://github.com/rstudio/py-shiny
description = A web development framework for Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/rstudio/py-shiny/issues
    Documentation = https://shiny.posit.co/py/
    Source Code = https://github.com/rstudio/py-shiny

[options]
python_requires = >=3.8
packages = find_namespace:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    typing-extensions>=4.0.1
    uvicorn>=0.16.0
    starlette>=0.17.1
    websockets>=10.0
    python-multipart
    htmltools>=0.2.1
    click>=8.1.4
    markdown-it-py>=1.1.0
    # This is needed for markdown-it-py. Without it, when loading shiny/ui/_markdown.py,
    # Python emits the following: "UserWarning: The 'tasklists' feature of GitHub
    # flavored markdown requires the mdit_py_plugins package."
    mdit-py-plugins>=0.3.0
    linkify-it-py>=1.0
    appdirs>=1.4.4
    asgiref>=3.5.2
    watchfiles>=0.18.0;platform_system!="Emscripten"
tests_require =
    pytest>=3
zip_safe = False

[options.extras_require]
test =
    pytest>=6.2.4
    pytest-asyncio>=0.17.2
    pytest-playwright>=0.3.0
    pytest-xdist
    pytest-timeout
    pytest-rerunfailures
    # For snapshot testing
    syrupy
    psutil
    astropy
    suntime
    timezonefinder
    ipyleaflet
    shinywidgets
    seaborn
    plotnine
    plotly
    duckdb
dev =
    black>=23.1.0
    flake8>=6.0.0
    flake8-bugbear>=23.2.13
    isort>=5.10.1
    # pyright produces break changes rapidly. Fix to a particular version
    pyright==1.1.311
    pre-commit>=2.15.0
    wheel
    matplotlib
    pandas
    pandas-stubs
    numpy
    shinyswatch>=0.2.4
doc =
    jupyter
    jupyter_client < 8.0.0
    tabulate
    shinylive==0.0.14
    pydantic==1.10
    quartodoc==0.4.1
    griffe==0.32.3

[options.packages.find]
include = shiny, shiny.*

[options.package_data]
shiny = py.typed

[options.entry_points]
console_scripts =
    shiny = shiny._main:main

[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# W503: Line break occurred before a binary operator
# E203: whitespace before ':' (see https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8)
ignore = E302, E501, F403, F405, W503, E203
extend_exclude = docs, .venv, venv, typings, e2e, build

[isort]
profile=black
skip=
    __init__.py
    typings/
    .venv
    venv
    .tox
    build
