[metadata]
name = shiny
version = attr: shiny.__version__
author = Winston Chang
author_email = winston@posit.co
url = https://github.com/posit-dev/py-shiny
description = A web development framework for Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Bug Tracker = https://github.com/posit-dev/py-shiny/issues
    Documentation = https://shiny.posit.co/py/
    Source Code = https://github.com/posit-dev/py-shiny

[options]
python_requires = >=3.8
packages = find_namespace:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    typing-extensions>=4.0.1
    uvicorn>=0.16.0;platform_system!="Emscripten"
    starlette
    websockets>=10.0
    python-multipart
    htmltools @ git+https://github.com/posit-dev/py-htmltools.git # FIXME(release)
    click>=8.1.4;platform_system!="Emscripten"
    markdown-it-py>=1.1.0
    # This is needed for markdown-it-py. Without it, when loading shiny/ui/_markdown.py,
    # Python emits the following: "UserWarning: The 'tasklists' feature of GitHub
    # flavored markdown requires the mdit_py_plugins package."
    mdit-py-plugins>=0.3.0
    linkify-it-py>=1.0
    appdirs>=1.4.4
    asgiref>=3.5.2
    packaging>=20.9
    watchfiles>=0.18.0;platform_system!="Emscripten"
    questionary>=2.0.0;platform_system!="Emscripten"
    # This is needed to address a DoS issue. In the future, when we are able to upgrade
    # to starlette>=0.36.2, we can remove this, because it will be brought in by
    # starlette. For more information, see:
    # https://github.com/posit-dev/py-shiny/issues/1114#issuecomment-1942757757
    python-multipart>=0.0.7;platform_system!="Emscripten"
    setuptools;python_version>="3.12"
tests_require =
    pytest>=3
zip_safe = False

[options.extras_require]
theme =
    # Theme extras are provided as a convenience. They are duplicated under the `dev`
    # extra for testing and local development. Update these versions in both locations!
    libsass>=0.23.0
test =
    pytest>=6.2.4
    pytest-asyncio>=0.17.2
    pytest-playwright>=0.3.0
    playwright>=1.43.0
    pytest-xdist
    pytest-timeout
    pytest-rerunfailures
    pytest-cov
    coverage
    # For snapshot testing
    syrupy
    psutil
    astropy
    suntime
    timezonefinder
    ipyleaflet
    shinywidgets
    seaborn
    plotnine
    plotly
    duckdb
    holoviews
    bokeh
    xarray
    geopandas
    geodatasets
    missingno
    rsconnect-python
    scikit-learn
    folium
    palmerpenguins
    faicons
    ridgeplot
dev =
    black>=24.0
    flake8>=6.0.0
    flake8-bugbear>=23.2.13
    isort>=5.10.1
    libsass>=0.23.0
    pyright==1.1.365 # must be larger than 1.1.366; https://github.com/microsoft/pyright/issues/8087
    pre-commit>=2.15.0
    wheel
    matplotlib
    pandas
    pandas-stubs
    numpy
    shinyswatch>=0.2.4
doc =
    jupyter
    jupyter_client < 8.0.0
    tabulate
    shinylive
    pydantic==1.10
    quartodoc==0.7.2
    griffe==0.33.0

[options.packages.find]
include = shiny, shiny.*

[options.package_data]
shiny = py.typed

[options.entry_points]
pytest11 =
    shiny-test = shiny.pytest._pytest
console_scripts =
    shiny = shiny._main:main


[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# W503: Line break occurred before a binary operator
# E203: whitespace before ':' (see https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8)
# E701 multiple statements on one line (colon)
# E704: Multiple statements on one line (def)
ignore = E302, E501, F403, F405, W503, E203, E701, E704
extend_exclude = docs, .venv, venv, typings, build, _dev

[isort]
profile=black
skip=
    __init__.py
    typings/
    _dev/
    .venv
    venv
    .tox
    build
